--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,8 @@ body {
 
 #grid {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(5, 100px);
+  grid-template-rows: 124px 124px 124px 124px 124px;
+  grid-template-columns: 242.5px 242.5px 242.5px 242.5px;
   gap: 10px;
   padding: 10px;
 }
@@ -20,7 +20,7 @@ body {
   align-items: center;
 }
 
-/* Correct Placement */
+/* Proper placement */
 .item1 {
   grid-column: 1 / 5;
 }
